# SEM-Archive

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-windows.yml  ci.yml
scripts/: build_windows.ps1  build_windows_winpython.bat
src/sem_archive/: __init__.py  __main__.py  app.py
src/sem_archive/db/: __init__.py  connection.py  repository.py  schema.py
src/sem_archive/models/: __init__.py
src/sem_archive/services/: __init__.py  copy_service.py  metadata_export.py  ppt_export.py  tag_service.py
src/sem_archive/ui/: browse_tab.py  dialogs.py  export_tab.py  folder_columns.py  import_tab.py  main_window.py  themes.py  tutorial.py
src/sem_archive/utils/: image_io.py  paths.py  server_paths.py  slot_detect.py
tests/: test_core.py  test_metadata_export.py  test_server_paths.py  test_themes.py  test_tutorial.py
