[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sem-archive"
version = "0.1.0"
description = "SEM画像の取込・整理・PowerPoint抽出ツール"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "SEM-Archive contributors" }]
dependencies = [
  "PySide6>=6.6",
  "Pillow>=10.0",
  "python-pptx>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pyinstaller>=6.0",
]

[project.scripts]
sem-archive = "sem_archive.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
